# imt_benchmark

./: pyproject.toml  setup.cfg
.github/workflows/: linting_tests.yml  publish-to-pypi.yml
src/benchmark/: __init__.py  _benchmark.py  test_benchmark.py
src/benchmark/xmls/: arm.xml  gait.xml
