[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imt-benchmark"
version = "0.0.2"
authors = [
  { name="Simon Bachhuber", email="simon.bachhuber@fau.de" },
]
description = "High-level Interface to Inertial Motion Tracking"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "imt-diodem",
    "jax",
    "numpy",
    "imt-ring",
]

[project.urls]
Homepage = "https://github.com/SimiPixel/imt_benchmark"
Issues = "https://github.com/SimiPixel/imt_benchmark/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
benchmark = ["xmls/gait.xml", "xmls/arm.xml"]
